dataset1235/2025-2/2868285114/users/154215138/executions/3649835072_4233865845.log
== RUN (2025-08-20 17:14:43)
-- CODE: 
Celsius = float(input("Digite a temperatura desejada: "))
Fahrenheit = Celsius * 9/5 + 32
Fahrenheit_arredondado = round(Fahrenheit, 2)
print(Fahrenheit)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura desejada: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura desejada: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura desejada: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura desejada: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura desejada: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura desejada: 86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:09:53)
-- CODE: 
Celsius = input("Digite a temperatura desejada: ")
Fahrenheit = (1.8 * Celsius) + 32
print("Sua temperatura em Fahrenheit e:", Fahrenheit)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:09:32)
-- CODE: 
Celsius = input("Digite a temperatura desejada: ")
Fahrenheit = (1.8 * Celsius) + 32
print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
File "XXXX", line 3
    print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
File "XXXX", line 3
    print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
File "XXXX", line 3
    print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
File "XXXX", line 3
    print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
File "XXXX", line 3
    print("Sua temperatura em Fahrenheit e:" {Fahrenheit})
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 17:14:45)
-- CODE: 
Celsius = float(input("Digite a temperatura desejada: "))
Fahrenheit = Celsius * 9/5 + 32
Fahrenheit_arredondado = round(Fahrenheit, 2)
print(Fahrenheit)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite a temperatura desejada: -40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite a temperatura desejada: 14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite a temperatura desejada: 212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite a temperatura desejada: 68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite a temperatura desejada: 32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite a temperatura desejada: 86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:08:47)
-- CODE: 
Celsius = input("Digite a temperatura desejada: ")
Fahrenheit = (1.8 * Celsius) + 32
print("Sua temperatura em Fahrenheit e: {Fahrenheit}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fahrenheit = (1.8 * Celsius) + 32
                  ~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
